# network-engine

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  composer.model.md  llms.md  pyproject.toml
.github/workflows/: pages.yml
aleph-context/: ACTIVACION.md  PLAN-multitask-sima-cima.md  README.md  engines-active.json  hot.md  posicion-linea.json
aleph-context/profiles/: README.md
aleph-context/reference/: composer-psychoanalysis.md
aleph-context/sessions/: README.md
aleph-context/templates/: profile.schema.json  psiconalisis-plantilla.md
cima-aleph/: INDICE.md  manifest.json  segment_cima_log.py
cima-aleph/raw/: log-agent-1.md  log-agent2.md
data/: catalog.json
data/profiles/: composer.json
data/schema/: catalog.schema.json  engine.schema.json  loadout.schema.json  profile.schema.json  session.schema.json
engines/: INDICE.md  PLAN-multitask-engines.md  RUNBOOK-indexar.md  engine.schema.json  manifest.json  segment_engine_template.py
linea-aleph/: CACHE_RUNBOOK.md  INDICE.md  INDICE2.md  manifest.draft.json  manifest.json  manifest2.json  ontology-seeds.json  segment_linea.py  segment_linea2.py
logs-aleph/: INDICE.md  manifest.json  segment_logs.py
logs-skill/: INDICE.md  manifest.json  segment_skill_log.py
network_engine/: __init__.py  paths.py
public/: index.html
public/assets/: style.css
scripts/: lint_gemini_chain.py  story_board_manifest.py
sima-aleph/: INDICE.md  manifest.json  segment_sima_log.py
site/: brand.json
tests/: test_build.py  test_catalog.py  test_loadout.py  test_pack.py  test_session.py  test_smoke.py
(+1048 files in other folders)
