[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-engine"
version = "0.1.0"
description = "Network Engine — tablero, catálogo y build estático para BOT_ALEPH"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
authors = [{ name = "Network Engine Contributors" }]
keywords = ["aleph", "tablero", "engines", "corpus", "reproducibilidad"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jinja2>=3.1",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
build = ["pillow>=10.0", "pytest>=7.4"]

[project.scripts]
nengine = "network_engine.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["network_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
